Tomcat -> Share session in memcached